apps/api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rigel-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rigel-api
  template:
    metadata:
      labels:
        app: rigel-api
    spec:
      imagePullSecrets:
        - name: ghrc
      containers:
        - name: api
          image: ghcr.io/tyrelchambers/rigel-api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
