apps/api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rigel-api
  namespace: default
spec:
  selector:
    app: rigel-api
  ports:
    - port: 80
      targetPort: 8080
